user video model

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,7 @@
 PORT=8000
 MONGODB_URI=mongodb+srv://aamanmujawar38:Aaman@3868@cluster0.s1akw27.mongodb.net/
+CORS_ORIGN=*
+ACCESS_TOKEN_SECRET =sdhfljksdfhoiwuporiupo349weourowieuroweiruoweiusoipoieu   
+ACCESS_TOKEN_EXPIRY = 1d
+REFRESH_TOKEN_SECRET = aisdfpaouydspfoadsypfoaysdpfoiuasdpofiu98483240
+REFRESH_TOKEN_EXPIRY =10d
