connection with controlles

--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,8 @@ ACCESS_TOKEN_SECRET =sdhfljksdfhoiwuporiupo349weourowieuroweiruoweiusoipoieu
 ACCESS_TOKEN_EXPIRY = 1d
 REFRESH_TOKEN_SECRET = aisdfpaouydspfoadsypfoaysdpfoiuasdpofiu98483240
 REFRESH_TOKEN_EXPIRY =10d
+
+
+CLOUDYNARY_CLOUD_NAME =dauqygdgv
+CLOUDYNARY_API_KEY =944182739656364
+CLOUDYNARY_API_SECRET =vHbcRxVfAwiVE3L7Uh2hMaMnUDE
